--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 deploy:
   provider: pages
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN
+  github_token: $GITHUB_TOKEN
   keep-history: true
   local_dir: dist
   on:
