--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 before_script:
   - npm install -g @angular/cli
 script:
-  - ng build --env=prod --bh /projet_front-end/
+  - ng build --prod --bh /projet_front-end/
 
 
 deploy:
