--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,16 @@
 language: node_js
 node_js:
-  - "stable"
-
+  - stable
 before_script:
-  - npm install -g @angular/cli
+   - npm install -g @angular/cli
 script:
-  - ng build --prod --bh /projet-front/
-
-
+   - ng build --prod --bh /projet-front/
 deploy:
   provider: pages
   skip-cleanup: true
-  github_token: $GITHUB_TOKEN
+  github-token: $GITHUB_TOKEN
   keep-history: true
-  local_dir: dist
+  target-branch: gh-pages
+  local-dir: dist
   on:
     branch: master
