--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 before_script:
    - npm install -g @angular/cli
 script:
-   - ng build --prod --bh /projet-front/
+   - ng build --prod --bh /projet-front/town
 deploy:
   provider: pages
   skip-cleanup: true
